--- a/lslidar_driver/params/lsx10_1.yaml
+++ b/lslidar_driver/params/lsx10_1.yaml
@@ -1,8 +1,8 @@
 /lidar_1/lslidar_driver_node:
-  ros__parameters: 
+  ros__parameters:
     frame_id: laser_link                                    #激光坐标
     group_ip: 224.1.1.2
-    add_multicast: false 
+    add_multicast: false
     device_ip: 192.168.1.200                                #雷达源ip
     device_ip_difop: 192.168.1.102                          #雷达目的IP
     msop_port: 2368                                         #雷达目的端口号
@@ -15,7 +15,7 @@
     use_gps_ts: false                                       #雷达是否使用GPS授时
     scan_topic: /scan                                       #设置激光数据topic名称
     interface_selection: serial                             #接口选择:net 为网口,serial 为串口。
-    serial_port_: /dev/ttyUSB0                              #串口连接时的串口号
+    serial_port_: /dev/ttyACM0                              #串口连接时的串口号
     high_reflection: false                                  #M10_P雷达需填写该值,若不确定，请联系技术支持。
     compensation: true				                              #M10系列是否使用角度补偿功能
     pubScan: true                                           #是否发布scan话题
