change frame id

--- a/lslidar_driver/params/lsx10.yaml
+++ b/lslidar_driver/params/lsx10.yaml
@@ -1,6 +1,6 @@
 /lslidar_driver_node:
   ros__parameters:
-    frame_id: laser_link                                    #激光坐标
+    frame_id: laser                                    #激光坐标
     group_ip: 224.1.1.2
     add_multicast: false
     device_ip: 192.168.1.200                   	            #雷达源IP
@@ -19,7 +19,7 @@
     high_reflection: false                                  #M10_P雷达需填写该值,若不确定，请联系技术支持。
     compensation: false				                              #M10系列是否使用角度补偿功能
     pubScan: true                                           #是否发布scan话题
-    pubPointCloud2: false                                    #是否发布pointcloud2话题
+    pubPointCloud2: false                                   #是否发布pointcloud2话题
     pointcloud_topic: /lslidar_point_cloud                  #设置激光数据topic名称
 #    pcap: /home/ls/1.pcap                                  #雷达是否使用pcap包读取功能
 #    in_file_name: /home/ls/1.txt                           #雷达是否使用txt文件读取功能
